--- a/Machine Learning - Final Project (1) (1).ipynb
+++ b/Machine Learning - Final Project (1) (1).ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sagar Vasaikar, Saachi Shah, Bhumi Shetty, Crescent Bardeskar, Niharika Shetty"
+    "Sagar Vasaikar"
    ]
   },
   {
